kubernetes-networks/web-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web   # Название нашего объекта Deployment
spec:
  replicas: 3 # Начнем с одного пода
  selector:    # Укажем, какие поды относятся к нашему Deployment:
    matchLabels:  # - это поды с меткой
      app: web    # app и ее значением web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 10%
  template:       # Теперь зададим шаблон конфигурации пода
    metadata:
      labels:
        app: web
    spec:  # Описание Pod
      containers: # Описание контейнеров внутри Pod
      - name: nginx  # Название контейнера
        image: dmikos4/web:testimg  # Образ из которого создается контейнер
        readinessProbe: # Добавим проверку готовности
          httpGet: # веб-сервера отдавать
            path: /index.html # контент
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }
        volumeMounts: #У контейнера и у init контейнера должны быть описаны volumeMounts
        - name: app
          mountPath: /app
      volumes: #Для того, чтобы файлы, созданные в init контейнере, были доступны основному контейнеру в pod нам понадобится использовать volume типа emptyDir
      - name: app
        emptyDir: {}
